# weberry

./: .dockerignore  .gitignore  .sesskey  AI_PIPELINE_GUIDE.txt  CLAUDE.md  Dockerfile  FOLDER_STRUCTURE.md  README.md  TECH_STACK.md  UI.md  a.css  a.html  a.js  auth.txt  example.txt  fix_templates.py  generate_logos.py  monetization_strategy.md  pyproject.toml  requirements.txt  test_ai_pipeline.py
.github/workflows/: deploy-hf.yml
config/: settings.py
core/: errors.py
core/ai/: copy_writer.py  css_generator.py  gateway.py  html_generator.py  planner.py  schemas.py  template_loader.py  template_renderer.py
core/billing/: entitlements.py  lemon_squeezy.py  plans.py  trial.py
core/limits/: ai_limits.py  cooldowns.py  rate_limits.py
core/models/: ai_usage.py  brand_memory.py  project.py  site_version.py  user.py
core/publishing/: pauser.py  renderer.py  storage.py  urls.py  validator.py
core/raw_template/: assembler.py  loader.py  rewriter.py  slot_analyzer.py
core/state_machine/: engine.py  guards.py  states.py  transitions.py
documents/: FASTHTML.md
documents/business/: business.md
documents/technical/: technical.md
scripts/: add_lemon_squeezy_fields.sql  drop_all.sql  give_agency.py  migrate.py  migrate_to_credits.sql  schema.sql  seed.py
static/: app.css  app.js  manifest.json
static/css/: analytics.css  dashboard_tabs.css  editor.css  landing.css  login-glass.css  profile.css  sidebar.css  survey_temp.css  (+1 more)
tests/: test_image_editing.py  test_online_first_images.py  test_templates.py  verify_lemon_squeezy.py
user_app/: db.py  main.py
(+175 files in other folders)
